@@ -6,7 +6,7 @@ class TestConditionsProcessRunning < Test::Unit::TestCase
       c = Conditions::ProcessRunning.new
       c.running = r
     
-      c.stubs(:watch).returns(stub(:pid => 123, :name => 'foo'))
+      c.stubs(:watch).returns(stub(:pid => 99999999, :name => 'foo'))
     
       # no_stdout do
         assert_equal !r, c.test
